# mnist_knn_kmean

./: Cargo.toml  README.md
c++/: CMakeLists.txt  FUTURE  Makefile  validation_results.txt
c++/include/: kmean.hpp  knn.hpp  observation.hpp  subset.hpp
c++/src/: kmean.cpp  knn.cpp  main.cpp
dataset/: .gitignore
rust/: Cargo.toml
rust/src/: anothererror.knn.rs  errored.knn.rs  knn.rs  main.rs  observation.rs  subset.rs
src/: knn.rs  main.rs  observation.rs
